<resources>
    <string name="app_name">AD340 Test App</string>
    <string name="about">Hi, my name is Joseph Sayler. I enjoy Java programming and hope to
        take the skills I have learned in previous classes to make an awesome Android app.

        This application is used for learning purposes. It currently shows a list of classic NES
        games, a text entry area, and a simple map. Eventually it may link to something on the web.
    </string>
    <string name="menu_entry_about">About</string>
    <string name="menu_entry_textEntry">Text Entry</string>
    <string name="menu_entry_recyclerList">Game List</string>
    <string name="menu_entry_main">Home</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="viewname">TextView</string>
    <string name="gameview">Game Art</string>
    <string name="gamelist">Game List</string>
    <string name="action_search">Search</string>
    <string name="share">Share</string>
    <string name="dialog_title">Dialog Text</string>
    <string name="dialog_title2">Pick a color:</string>
    <string name="ok_txt">OK</string>
    <string name="cancel_txt">Cancel</string>
    <string name="dialog_text">Pick an option. Your choice will be logged.</string>
    <string-array name="colors">
        <item>"Red"</item>
        <item>"Green"</item>
        <item>"Blue"</item>
        <item>"Yellow"</item>
    </string-array>
    <string-array name="toastString">
        <item>"Arrow"</item>
        <item>"Blades of Steel"</item>
        <item>"Battletoads"</item>
        <item>"Castlevania"</item>
        <item>"Duck Hunt"</item>
        <item>"Excitebike"</item>
        <item>"Final Fantasy"</item>
        <item>"Ice Climbers"</item>
        <item>"Kirby's Adventure"</item>
        <item>"Zelda II: The Adventure of Link"</item>
        <item>"Super Mario Bros."</item>
        <item>"Ninja Gaiden"</item>
        <item>"Teenage Mutant Ninja Turtles"</item>
        <item>"Q*bert"</item>
        <item>"The Legend of Zelda"</item>
        <item>"Slalom"</item>
        <item>"Pinball"</item>
        <item>"Metroid"</item>
        <item>"Kid Icarus"</item>
        <item>"Popeye"</item>
        <item>"Gumshoe"</item>
        <item>"Donkey Kong 3"</item>
        <item>"Baseball"</item>
        <item>"Donkey Kong Jr. Math"</item>
        <item>"Wrecking Crew"</item>
        <item>"10-Yard Fight"</item>
        <item>"Balloon Fight"</item>
        <item>"Mega Man 2"</item>
    </string-array>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="location">Current Location</string>
    <string name="menu_entry_curLoc">Location</string>
    <string name="no_location_detected">No location detected. Make sure Location permissions are granted for this application.</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>