<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/GameList"
        android:title="@string/menu_entry_recyclerList"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_view_list"/>
    <item android:id="@+id/TextEntry"
        android:title="@string/menu_entry_textEntry"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_create"/>
    <item android:id="@+id/About"
        android:title="@string/menu_entry_about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_info"/>

</menu>